k8s manifests/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  creationTimestamp: "2022-11-13T00:10:39Z"
  generation: 1
  name: agic-ingress-for-both-environments
  namespace: ingress-perf-testing
  resourceVersion: "5502230"
  uid: 9dbe8c56-fb2e-4cd5-b841-6ce3de6c6b31
spec:
  rules:
  - host: antiaffinity
    http:
      paths:
      - backend:
          service:
            name: service-anti-affinity-dummy-clients
            port:
              number: 80
        path: /
        pathType: Exact
  - host: affinity
    http:
      paths:
      - backend:
          service:
            name: service-affinity-dummy-clients
            port:
              number: 80
        path: /
        pathType: Exact
